v8: update all docs, add TESTING.md, fix Navbar null crash
- Updated README.md with v7/v8 stack versions, full structure, and links to TESTING.md
- Updated PROCESS.md with V6 (Java 24) and V7 (Spring Boot 4.0.3) sections
- Updated ISSUES.md with V6 and V7 issues including port conflict and Navbar fix
- Added TESTING.md — complete manual testing guide for all features
- Updated frontend/README.md with actual tech stack and project structure
- Fixed Navbar.tsx: user.name?.split(" ")[0] ?? "User" to prevent null crash

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>